--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
 		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
 		"build": "NODE_ENV=production webpack --progress --config webpack.js",
+		"build:analyze": "NODE_ENV=production webpack --progress --config webpack.js --analyze",
 		"serve": "NODE_ENV=development webpack serve --progress --config webpack.js",
 		"lint": "eslint --ext .ts,.js,.vue src",
 		"lint:fix": "eslint --ext .ts,.js,.vue src --fix",
@@ -70,6 +71,7 @@
 		"stylelint-webpack-plugin": "^5.0.1",
 		"vite-plugin-eslint": "^1.8.1",
 		"vite-plugin-stylelint": "^6.0.0",
-		"vue-loader": "^15.11.1"
+		"vue-loader": "^15.11.1",
+		"webpack-bundle-analyzer": "^4.10.2"
 	}
 }
